fixing checkboxes that had gotten unaligned after increasing listing-spacing

--- a/assets/sass/2_fragments/_listing-item.scss
+++ b/assets/sass/2_fragments/_listing-item.scss
@@ -12,7 +12,7 @@
         input[type="checkbox"],
         input[type="radio"] {
             position: relative;
-            top: $base-spacing+1;
+            top: $base-spacing*2;
         }
 
         .buttons-updown {
